sandbox/new-c-api/tinyusdz_c.h


typedef struct tusdz_stage_impl* tusdz_stage;
typedef struct tusdz_prim_impl* tusdz_prim;
typedef struct tusdz_value_impl* tusdz_value;
typedef enum {
    TUSDZ_SUCCESS = 0,
    TUSDZ_ERROR_FILE_NOT_FOUND = -1,
    TUSDZ_ERROR_PARSE_FAILED = -2,
    TUSDZ_ERROR_OUT_OF_MEMORY = -3,
    TUSDZ_ERROR_INVALID_ARGUMENT = -4,
    TUSDZ_ERROR_NOT_SUPPORTED = -5,
    TUSDZ_ERROR_COMPOSITION_FAILED = -6,
    TUSDZ_ERROR_INVALID_FORMAT = -7,
    TUSDZ_ERROR_IO_ERROR = -8,
    TUSDZ_ERROR_INTERNAL = -99
} tusdz_result;
typedef enum {
    TUSDZ_FORMAT_AUTO = 0,  
    TUSDZ_FORMAT_USDA,      
    TUSDZ_FORMAT_USDC,      
    TUSDZ_FORMAT_USDZ       
} tusdz_format;
typedef enum {
    TUSDZ_PRIM_UNKNOWN = 0,
    TUSDZ_PRIM_XFORM,
    TUSDZ_PRIM_MESH,
    TUSDZ_PRIM_MATERIAL,
    TUSDZ_PRIM_SHADER,
    TUSDZ_PRIM_CAMERA,
    TUSDZ_PRIM_DISTANT_LIGHT,
    TUSDZ_PRIM_SPHERE_LIGHT,
    TUSDZ_PRIM_RECT_LIGHT,
    TUSDZ_PRIM_DISK_LIGHT,
    TUSDZ_PRIM_CYLINDER_LIGHT,
    TUSDZ_PRIM_DOME_LIGHT,
    TUSDZ_PRIM_SKELETON,
    TUSDZ_PRIM_SKELROOT,
    TUSDZ_PRIM_SKELANIMATION,
    TUSDZ_PRIM_SCOPE,
    TUSDZ_PRIM_GEOMSUBSET,
    TUSDZ_PRIM_SPHERE,
    TUSDZ_PRIM_CUBE,
    TUSDZ_PRIM_CYLINDER,
    TUSDZ_PRIM_CAPSULE,
    TUSDZ_PRIM_CONE,
    TUSDZ_PRIM_NURBS_PATCH,
    TUSDZ_PRIM_NURBS_CURVE,
    TUSDZ_PRIM_BASIS_CURVES,
    TUSDZ_PRIM_POINT_INSTANCER,
    TUSDZ_PRIM_VOLUME
} tusdz_prim_type;
typedef enum {
    TUSDZ_VALUE_NONE = 0,
    TUSDZ_VALUE_BOOL,
    TUSDZ_VALUE_INT,
    TUSDZ_VALUE_UINT,
    TUSDZ_VALUE_INT64,
    TUSDZ_VALUE_UINT64,
    TUSDZ_VALUE_HALF,
    TUSDZ_VALUE_FLOAT,
    TUSDZ_VALUE_DOUBLE,
    TUSDZ_VALUE_STRING,
    TUSDZ_VALUE_TOKEN,
    TUSDZ_VALUE_ASSET_PATH,
    TUSDZ_VALUE_INT2,
    TUSDZ_VALUE_INT3,
    TUSDZ_VALUE_INT4,
    TUSDZ_VALUE_HALF2,
    TUSDZ_VALUE_HALF3,
    TUSDZ_VALUE_HALF4,
    TUSDZ_VALUE_FLOAT2,
    TUSDZ_VALUE_FLOAT3,
    TUSDZ_VALUE_FLOAT4,
    TUSDZ_VALUE_DOUBLE2,
    TUSDZ_VALUE_DOUBLE3,
    TUSDZ_VALUE_DOUBLE4,
    TUSDZ_VALUE_MATRIX2D,
    TUSDZ_VALUE_MATRIX3D,
    TUSDZ_VALUE_MATRIX4D,
    TUSDZ_VALUE_QUATH,
    TUSDZ_VALUE_QUATF,
    TUSDZ_VALUE_QUATD,
    TUSDZ_VALUE_COLOR3F,
    TUSDZ_VALUE_COLOR3D,
    TUSDZ_VALUE_COLOR4F,
    TUSDZ_VALUE_COLOR4D,
    TUSDZ_VALUE_NORMAL3F,
    TUSDZ_VALUE_NORMAL3D,
    TUSDZ_VALUE_POINT3F,
    TUSDZ_VALUE_POINT3D,
    TUSDZ_VALUE_TEXCOORD2F,
    TUSDZ_VALUE_TEXCOORD2D,
    TUSDZ_VALUE_TEXCOORD3F,
    TUSDZ_VALUE_TEXCOORD3D,
    TUSDZ_VALUE_ARRAY,
    TUSDZ_VALUE_DICTIONARY,
    TUSDZ_VALUE_TIME_SAMPLES,
    TUSDZ_VALUE_RELATIONSHIP
} tusdz_value_type;
typedef struct {
    size_t max_memory_limit_mb;
    int max_depth;
    int enable_composition;
    int strict_mode;
    int structure_only;
    const char* (*asset_resolver)(const char* asset_path, void* user_data);
    void* asset_resolver_data;
} tusdz_load_options;
TUSDZ_API tusdz_result tusdz_init(void);
TUSDZ_API void tusdz_shutdown(void);
TUSDZ_API const char* tusdz_get_version(void);
TUSDZ_API tusdz_result tusdz_load_from_file(
    const char* filepath,
    const tusdz_load_options* options,
    tusdz_stage* out_stage,
    char* error_buf,
    size_t error_buf_size
);
TUSDZ_API tusdz_result tusdz_load_from_memory(
    const void* data,
    size_t size,
    tusdz_format format,
    const tusdz_load_options* options,
    tusdz_stage* out_stage,
    char* error_buf,
    size_t error_buf_size
);
TUSDZ_API void tusdz_stage_free(tusdz_stage stage);
TUSDZ_API tusdz_prim tusdz_stage_get_root_prim(tusdz_stage stage);
TUSDZ_API size_t tusdz_prim_get_child_count(tusdz_prim prim);
TUSDZ_API tusdz_prim tusdz_prim_get_child_at(tusdz_prim prim, size_t index);
TUSDZ_API const char* tusdz_prim_get_name(tusdz_prim prim);
TUSDZ_API tusdz_prim_type tusdz_prim_get_type(tusdz_prim prim);
TUSDZ_API const char* tusdz_prim_get_path(tusdz_prim prim);
TUSDZ_API int tusdz_prim_is_type(tusdz_prim prim, tusdz_prim_type type);
TUSDZ_API const char* tusdz_prim_get_type_name(tusdz_prim prim);
TUSDZ_API size_t tusdz_prim_get_property_count(tusdz_prim prim);
TUSDZ_API const char* tusdz_prim_get_property_name_at(tusdz_prim prim, size_t index);
TUSDZ_API tusdz_value tusdz_prim_get_property(tusdz_prim prim, const char* name);
TUSDZ_API void tusdz_value_free(tusdz_value value);
TUSDZ_API tusdz_value_type tusdz_value_get_type(tusdz_value value);
TUSDZ_API int tusdz_value_is_array(tusdz_value value);
TUSDZ_API size_t tusdz_value_get_array_size(tusdz_value value);
TUSDZ_API tusdz_result tusdz_value_get_int(tusdz_value value, int* out);
TUSDZ_API tusdz_result tusdz_value_get_float(tusdz_value value, float* out);
TUSDZ_API tusdz_result tusdz_value_get_double(tusdz_value value, double* out);
TUSDZ_API tusdz_result tusdz_value_get_string(tusdz_value value, const char** out);
TUSDZ_API tusdz_result tusdz_value_get_float3(tusdz_value value, float* out_xyz);
TUSDZ_API tusdz_result tusdz_value_get_matrix4d(tusdz_value value, double* out_mat4x4);
TUSDZ_API tusdz_result tusdz_mesh_get_points(
    tusdz_prim mesh,
    const float** out_points,
    size_t* out_count
);
TUSDZ_API tusdz_result tusdz_mesh_get_face_counts(
    tusdz_prim mesh,
    const int** out_counts,
    size_t* out_count
);
TUSDZ_API tusdz_result tusdz_mesh_get_indices(
    tusdz_prim mesh,
    const int** out_indices,
    size_t* out_count
);
TUSDZ_API tusdz_result tusdz_xform_get_local_matrix(
    tusdz_prim xform,
    double time,
    double* out_matrix
);
TUSDZ_API tusdz_prim tusdz_prim_get_bound_material(tusdz_prim prim);
TUSDZ_API tusdz_prim tusdz_material_get_surface_shader(tusdz_prim material);
TUSDZ_API tusdz_value tusdz_shader_get_input(tusdz_prim shader, const char* input_name);
TUSDZ_API const char* tusdz_shader_get_type_id(tusdz_prim shader);
TUSDZ_API int tusdz_stage_has_animation(tusdz_stage stage);
TUSDZ_API tusdz_result tusdz_stage_get_time_range(
    tusdz_stage stage,
    double* out_start_time,
    double* out_end_time,
    double* out_fps
);
TUSDZ_API int tusdz_value_is_animated(tusdz_value value);
TUSDZ_API const char* tusdz_result_to_string(tusdz_result result);
TUSDZ_API const char* tusdz_prim_type_to_string(tusdz_prim_type type);
TUSDZ_API const char* tusdz_value_type_to_string(tusdz_value_type type);
TUSDZ_API tusdz_format tusdz_detect_format(const char* filepath);
TUSDZ_API void tusdz_stage_print_hierarchy(tusdz_stage stage, int max_depth);
TUSDZ_API void tusdz_get_memory_stats(
    tusdz_stage stage,
    size_t* out_bytes_used,
    size_t* out_bytes_peak
);