sandbox/new-c-api/lib.rs

//! TinyUSDZ Rust FFI Bindings
//!
//! Safe Rust bindings for the TinyUSDZ C99 API.
//!
//! # Examples
//!
//! ```no_run
//! use tinyusdz::{init, shutdown, load_from_file, PrimType};
//!
//! fn main() -> Result<(), Box<dyn std::error::Error>> {
//!     init()?;
//!
//!     let stage = load_from_file("model.usd", None)?;
//!     let root = stage.root_prim();
//!
//!     if let Some(root) = root {
//!         println!("Root: {}", root.name());
//!         for child in root.children() {
//!             println!("  - {} [{}]", child.name(), child.type_name());
//!         }
//!     }
//!
//!     shutdown();
//!     Ok(())
//! }
//! ```

use std::ffi::{CStr, CString, c_void, c_int, c_uint, c_float, c_double, c_char};
use std::os::raw::*;
use std::ptr;
use std::path::Path;

// ============================================================================
// FFI Bindings
// ============================================================================

#[link(name = "tinyusdz_c")]
extern "C" {
    // Initialization
    fn tusdz_init() -> c_int;
    fn tusdz_shutdown();
    fn tusdz_get_version() -> *const c_char;

    // Loading
    fn tusdz_load_from_file(
        filepath: *const c_char,
        options: *const LoadOptionsC,
        out_stage: *mut *mut c_void,
        error_buf: *mut c_char,
        error_buf_size: usize,
    ) -> c_int;

    fn tusdz_load_from_memory(
        data: *const c_void,
        size: usize,
        format: c_int,
        options: *const LoadOptionsC,
        out_stage: *mut *mut c_void,
        error_buf: *mut c_char,
        error_buf_size: usize,
    ) -> c_int;

    fn tusdz_stage_free(stage: *mut c_void);

    // Prim operations
    fn tusdz_stage_get_root_prim(stage: *mut c_void) -> *mut c_void;
    fn tusdz_prim_get_name(prim: *mut c_void) -> *const c_char;
    fn tusdz_prim_get_path(prim: *mut c_void) -> *const c_char;
    fn tusdz_prim_get_type(prim: *mut c_void) -> c_int;
    fn tusdz_prim_get_type_name(prim: *mut c_void) -> *const c_char;
    fn tusdz_prim_is_type(prim: *mut c_void, prim_type: c_int) -> c_int;
    fn tusdz_prim_get_child_count(prim: *mut c_void) -> usize;
    fn tusdz_prim_get_child_at(prim: *mut c_void, index: usize) -> *mut c_void;
    fn tusdz_prim_get_property_count(prim: *mut c_void) -> usize;
    fn tusdz_prim_get_property_name_at(prim: *mut c_void, index: usize) -> *const c_char;
    fn tusdz_prim_get_property(prim: *mut c_void, name: *const c_char) -> *mut c_void;

    // Value operations
    fn tusdz_value_free(value: *mut c_void);
    fn tusdz_value_get_type(value: *mut c_void) -> c_int;
    fn tusdz_value_is_array(value: *mut c_void) -> c_int;
    fn tusdz_value_get_array_size(value: *mut c_void) -> usize;
    fn tusdz_value_get_float(value: *mut c_void, out: *mut c_float) -> c_int;
    fn tusdz_value_get_double(value: *mut c_void, out: *mut c_double) -> c_int;
    fn tusdz_value_get_int(value: *mut c_void, out: *mut c_int) -> c_int;
    fn tusdz_value_get_string(value: *mut c_void, out: *mut *const c_char) -> c_int;
    fn tusdz_value_get_float3(value: *mut c_void, out: *mut [c_float; 3]) -> c_int;
    fn tusdz_value_get_matrix4d(value: *mut c_void, out: *mut [c_double; 16]) -> c_int;

    // Mesh operations
    fn tusdz_mesh_get_points(
        mesh: *mut c_void,
        out_points: *mut *const c_float,
        out_count: *mut usize,
    ) -> c_int;
    fn tusdz_mesh_get_face_counts(
        mesh: *mut c_void,
        out_counts: *mut *const c_int,
        out_count: *mut usize,
    ) -> c_int;
    fn tusdz_mesh_get_indices(
        mesh: *mut c_void,
        out_indices: *mut *const c_int,
        out_count: *mut usize,
    ) -> c_int;

    // Transform operations
    fn tusdz_xform_get_local_matrix(
        xform: *mut c_void,
        time: c_double,
        out_matrix: *mut [c_double; 16],
    ) -> c_int;

    // Material operations
    fn tusdz_prim_get_bound_material(prim: *mut c_void) -> *mut c_void;
    fn tusdz_material_get_surface_shader(material: *mut c_void) -> *mut c_void;
    fn tusdz_shader_get_input(shader: *mut c_void, input_name: *const c_char) -> *mut c_void;
    fn tusdz_shader_get_type_id(shader: *mut c_void) -> *const c_char;

    // Animation operations
    fn tusdz_stage_has_animation(stage: *mut c_void) -> c_int;
    fn tusdz_stage_get_time_range(
        stage: *mut c_void,
        out_start: *mut c_double,
        out_end: *mut c_double,
        out_fps: *mut c_double,
    ) -> c_int;
    fn tusdz_value_is_animated(value: *mut c_void) -> c_int;

    // Utilities
    fn tusdz_result_to_string(result: c_int) -> *const c_char;
    fn tusdz_prim_type_to_string(prim_type: c_int) -> *const c_char;
    fn tusdz_value_type_to_string(value_type: c_int) -> *const c_char;
    fn tusdz_detect_format(filepath: *const c_char) -> c_int;
    fn tusdz_stage_print_hierarchy(stage: *mut c_void, max_depth: c_int);
    fn tusdz_get_memory_stats(
        stage: *mut c_void,
        out_bytes_used: *mut usize,
        out_bytes_peak: *mut usize,
    );
}

// ============================================================================
// C Structure Mapping
// ============================================================================

#[repr(C)]
struct LoadOptionsC {
    max_memory_limit_mb: usize,
    max_depth: c_int,
    enable_composition: c_int,
    strict_mode: c_int,
    structure_only: c_int,
    asset_resolver: *const c_void,
    asset_resolver_data: *const c_void,
}

// ============================================================================
// Result Codes
// ============================================================================

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Result {
    Success = 0,
    FileNotFound = -1,
    ParseFailed = -2,
    OutOfMemory = -3,
    InvalidArgument = -4,
    NotSupported = -5,
    CompositionFailed = -6,
    InvalidFormat = -7,
    IoError = -8,
    Internal = -99,
}

impl Result {
    pub fn to_string(&self) -> String {
        unsafe {
            let s = tusdz_result_to_string(*self as c_int);
            if !s.is_null() {
                CStr::from_ptr(s).to_string_lossy().to_string()
            } else {
                "Unknown".to_string()
            }
        }
    }
}

// ============================================================================
// Type Enums
// ============================================================================

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Format {
    Auto = 0,
    Usda = 1,
    Usdc = 2,
    Usdz = 3,
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum PrimType {
    Unknown = 0,
    Xform = 1,
    Mesh = 2,
    Material = 3,
    Shader = 4,
    Camera = 5,
    DistantLight = 6,
    SphereLight = 7,
    RectLight = 8,
    DiskLight = 9,
    CylinderLight = 10,
    DomeLight = 11,
    Skeleton = 12,
    SkelRoot = 13,
    SkelAnimation = 14,
    Scope = 15,
    GeomSubset = 16,
    Sphere = 17,
    Cube = 18,
    Cylinder = 19,
    Capsule = 20,
    Cone = 21,
}

impl PrimType {
    pub fn to_string(&self) -> String {
        unsafe {
            let s = tusdz_prim_type_to_string(*self as c_int);
            if !s.is_null() {
                CStr::from_ptr(s).to_string_lossy().to_string()
            } else {
                "Unknown".to_string()
            }
        }
    }
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum ValueType {
    None = 0,
    Bool = 1,
    Int = 2,
    Uint = 3,
    Float = 5,
    Double = 6,
    String = 7,
    Float2 = 13,
    Float3 = 14,
    Float4 = 15,
    Double2 = 16,
    Double3 = 17,
    Double4 = 18,
    Matrix3D = 22,
    Matrix4D = 23,
    QuatF = 24,
    QuatD = 25,
    Color3F = 26,
    Normal3F = 29,
    Point3F = 31,
    TexCoord2F = 33,
    Array = 41,
    TimeSamples = 43,
}

impl ValueType {
    pub fn to_string(&self) -> String {
        unsafe {
            let s = tusdz_value_type_to_string(*self as c_int);
            if !s.is_null() {
                CStr::from_ptr(s).to_string_lossy().to_string()
            } else {
                "Unknown".to_string()
            }
        }
    }
}

// ============================================================================
// Load Options
// ============================================================================

#[derive(Debug, Clone)]
pub struct LoadOptions {
    pub max_memory_limit_mb: usize,
    pub max_depth: i32,
    pub enable_composition: bool,
    pub strict_mode: bool,
    pub structure_only: bool,
}

impl Default for LoadOptions {
    fn default() -> Self {
        Self {
            max_memory_limit_mb: 0,
            max_depth: 0,
            enable_composition: true,
            strict_mode: false,
            structure_only: false,
        }
    }
}

// ============================================================================
// Mesh Data
// ============================================================================

#[derive(Debug, Clone)]
pub struct MeshData {
    pub points: Option<Vec<f32>>,
    pub indices: Option<Vec<i32>>,
    pub face_counts: Option<Vec<i32>>,
    pub normals: Option<Vec<f32>>,
    pub uvs: Option<Vec<f32>>,
    pub vertex_count: usize,
    pub face_count: usize,
}

// ============================================================================
// Transform
// ============================================================================

#[derive(Debug, Clone)]
pub struct Transform {
    pub matrix: [[f64; 4]; 4],
}

// ============================================================================
// Value Wrapper
// ============================================================================

pub struct Value {
    handle: *mut c_void,
}

impl Value {
    unsafe fn from_raw(handle: *mut c_void) -> Option<Self> {
        if handle.is_null() {
            None
        } else {
            Some(Value { handle })
        }
    }

    pub fn value_type(&self) -> ValueType {
        unsafe { std::mem::transmute(tusdz_value_get_type(self.handle) as u32) }
    }

    pub fn is_array(&self) -> bool {
        unsafe { tusdz_value_is_array(self.handle) != 0 }
    }

    pub fn array_size(&self) -> usize {
        unsafe { tusdz_value_get_array_size(self.handle) }
    }

    pub fn get_float(&self) -> Option<f32> {
        unsafe {
            let mut val = 0.0f32;
            if tusdz_value_get_float(self.handle, &mut val) == 0 {
                Some(val)
            } else {
                None
            }
        }
    }

    pub fn get_double(&self) -> Option<f64> {
        unsafe {
            let mut val = 0.0f64;
            if tusdz_value_get_double(self.handle, &mut val) == 0 {
                Some(val)
            } else {
                None
            }
        }
    }

    pub fn get_string(&self) -> Option<String> {
        unsafe {
            let mut ptr: *const c_char = ptr::null();
            if tusdz_value_get_string(self.handle, &mut ptr) == 0 && !ptr.is_null() {
                Some(CStr::from_ptr(ptr).to_string_lossy().to_string())
            } else {
                None
            }
        }
    }

    pub fn get_float3(&self) -> Option<[f32; 3]> {
        unsafe {
            let mut val = [0.0f32; 3];
            if tusdz_value_get_float3(self.handle, &mut val) == 0 {
                Some(val)
            } else {
                None
            }
        }
    }
}

impl Drop for Value {
    fn drop(&mut self) {
        unsafe {
            tusdz_value_free(self.handle);
        }
    }
}

// ============================================================================
// Prim Wrapper
// ============================================================================

pub struct Prim {
    handle: *mut c_void,
}

impl Prim {
    unsafe fn from_raw(handle: *mut c_void) -> Option<Self> {
        if handle.is_null() {
            None
        } else {
            Some(Prim { handle })
        }
    }
